Completed setting up models and seeding database.

--- a/views/index.html
+++ b/views/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Testing</title>
+    <title>Trip Planner UI</title>
   </head>
   <body>
     <h1>Testing</h1>
