--- a/views/index.html
+++ b/views/index.html
@@ -5,6 +5,12 @@
   </head>
   <body>
     <h1>Testing</h1>
+    <label>Hotels</label>
+    <select>
+      {% for hotel in all_hotels  %}
+        <option value="{{ hotel.name }}">{{ hotel.name }}</option>
+      {%endfor%}
+    </select>
   </body>
 
 </html>
