--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,2 +1,64 @@
-h1 {
-  color: red; }
+nav {
+  position: fixed;
+  top: 0px;
+  width: 100%;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.75);
+  z-index: 2000; }
+  nav .logo {
+    height: 50px;
+    padding: 5px;
+    width: 200px;
+    background-color: red;
+    display: inline-block; }
+    nav .logo h3 {
+      font-family: helvetica;
+      margin: 5px; }
+  nav .nav-link {
+    color: white;
+    display: inline-block;
+    cursor: pointer;
+    height: 100%;
+    padding: 0px 10px 0px 10px;
+    background-color: inherit;
+    transition: 0.5s all;
+    -webkit-transition: 0.5s all; }
+  nav .nav-link:hover {
+    background-color: #D1D1D1; }
+
+label {
+  color: white;
+  display: block;
+  margin: 10px; }
+
+select {
+  width: 75%; }
+
+.listBtn {
+  position: absolute;
+  right: 0px; }
+
+.container {
+  position: fixed;
+  top: 50px;
+  right: 0px;
+  height: 100%;
+  background-color: green;
+  width: 33%; }
+  .container .touristStuff {
+    padding: 10px;
+    background-color: blue;
+    height: 45%; }
+  .container .myTrip {
+    padding: 10px;
+    background-color: purple;
+    height: 45%; }
+    .container .myTrip .day {
+      background-color: gold; }
+      .container .myTrip .day h3 {
+        margin-top: 5px; }
+    .container .myTrip .daySelector {
+      background-color: yellow;
+      padding: 10px; }
+    .container .myTrip .todo .listBtn {
+      right: 30px; }
