--- a/views/layout.html
+++ b/views/layout.html
@@ -2,10 +2,30 @@
 <html>
   <head>
     <title>{% block title %}TripPlanner{% endblock %}</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="/public/stylesheets/index.css">
+    <link type="text/css" rel="stylesheet" href="stylesheets/index.css">
   </head>
   <body>
+    <nav>
+      <div class="container-fluid">
+        <div class="logo">
+          <h3>Trip Planner</h3>
+        </div>
+        <div class="nav-link">
+          <h4> Home </h4>
+        </div>
+        <div class="nav-link">
+          <h4> About </h4>
+        </div>
+        <div class="nav-link">
+          <h4> Contact </h4>
+        </div>
+      </div>
+    </nav>
     {% block content %}
 
     {% endblock %}
