--- a/views/layout.html
+++ b/views/layout.html
@@ -29,6 +29,8 @@
     {% block content %}
 
     {% endblock %}
-    <scripts type="text/javascript" src="/bower_components/jquery/jquery.min.js"></scripts>
+    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyALmrJ-b3cJUSwkf1Ekj2_m4tqaMd0hlA4&sensor=true"></script>
+    <script src="scripts/map.js"></script>
   </body>
 </html>
