--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -4,7 +4,8 @@ nav {
   width: 100%;
   height: 50px;
   background-color: rgba(0, 0, 0, 0.75);
-  z-index: 2000; }
+  z-index: 2000;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.95); }
   nav .logo {
     height: 50px;
     padding: 5px;
@@ -34,22 +35,44 @@ label {
 select {
   width: 75%; }
 
+.btn-remove {
+  background-color: red;
+  font-size: 20px;
+  color: white;
+  transition: 0.5s all;
+  -webkit-transition: 0.5s all; }
+
+.btn-remove:hover {
+  background-color: yellow;
+  color: black; }
+
+.btn-remove:active {
+  background-color: orange;
+  color: yellow; }
+
 .listBtn {
   position: absolute;
-  right: 0px; }
+  right: 0px;
+  height: 40px;
+  width: 40px; }
+
+.btn-circle {
+  border-radius: 100%; }
 
 .container {
   position: fixed;
   top: 50px;
   right: 0px;
   height: 100%;
-  background-color: green;
-  width: 33%; }
+  width: 33%;
+  z-index: 1000; }
   .container .touristStuff {
     padding: 10px;
-    background-color: blue;
+    background-color: rgba(42, 81, 94, 0.95);
+    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
     height: 45%; }
   .container .myTrip {
+    margin-top: 20px;
     padding: 10px;
     background-color: purple;
     height: 45%; }
@@ -62,3 +85,9 @@ select {
       padding: 10px; }
     .container .myTrip .todo .listBtn {
       right: 30px; }
+
+#map-canvas {
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  top: 0px; }
