Completed basic layout.

--- a/assets/stylesheets/index.scss
+++ b/assets/stylesheets/index.scss
@@ -1,3 +1,8 @@
+$boxShadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+$fancyFont: 'Lobster', cursive;
+$myTripColor: rgba(52, 171, 211, 0.95);
+$menuTransition: 1s all ease;
+
 nav {
   position: fixed;
   top: 0px;
@@ -5,41 +10,48 @@ nav {
   height: 50px;
   background-color: rgba(0,0,0,0.75);
   z-index: 2000;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.95);
+  box-shadow: $boxShadow;
   .logo {
     height: 50px;
     padding: 5px;
     width: 200px;
     background-color: red;
     display: inline-block;
-
+    font-family: $fancyFont;
+    color: white;
     h3 {
-      font-family: helvetica;
       margin: 5px;
     }
   }
   .nav-link {
     color: white;
     display: inline-block;
+    border-radius: 7px;
     // margin: 0px 20px 0px 20px;
     cursor: pointer;
     height: 100%;
     padding: 0px 10px 0px 10px;
     background-color: inherit;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all;
+    transition: 0.25s all;
+    -webkit-transition: 0.25s all;
   }
 
-  .nav-link:hover{
-    background-color: #D1D1D1;
-  }
+}
 
+.nav-link:hover{
+  background-color: red;
+}
+
+.nav-link:active {
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 1) inset;
 }
 
 label {
   color: white;
   display: block;
-  margin: 10px;
+  margin: 5px 0px 5px 5px;
+  font-family: $fancyFont;
+  font-size: 1.5em;
 }
 
 select {
@@ -50,6 +62,7 @@ select {
   background-color: red;
   font-size: 20px;
   color: white;
+  border: none;
   transition: 0.5s all;
   -webkit-transition: 0.5s all;
 }
@@ -62,61 +75,87 @@ select {
 .btn-remove:active {
   background-color: orange;
   color: yellow;
-}
-
-.listBtn {
-  position: absolute;
-  right: 0px;
-  height: 40px;
-  width: 40px;
+  box-shadow: 0px 0px 10px black inset;
 }
 
 .btn-circle {
   border-radius: 100%;
 }
 
-.container {
+.menu-label {
+  position: absolute;
+  bottom: 10px;
+  font-family: $fancyFont;
+  color: rgba(219, 223, 238, 1);
+
+}
+
+.menu-box {
   position: fixed;
-  top: 50px;
-  right: 0px;
-  height: 100%;
-  width: 33%;
+  top: -300px;
+  height: 400px;
+  width: 300px;
+  padding: 10px;
   z-index: 1000;
+  box-shadow: $boxShadow;
+  transition: $menuTransition;
+  -webkit-transition: $menuTransition;
+}
 
-  .touristStuff {
-    padding: 10px;
-    background-color: rgba(42, 81, 94, 0.95);
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
-    height: 45%;
+.touristStuff {
+  background-color: rgba(42, 81, 94, 0.95);
+  right: 305px;
+  
+}
+
+.touristStuff:hover {
+  top: 50px;
+}
+
+.myTrip {
+  background-color: $myTripColor;
+  right: 0px;
+
+  .day {
+
+    h3 {
+      font-family: $fancyFont;
+      margin-top: 5px;
+    }
   }
-
-  .myTrip {
-    margin-top: 20px;
+  .daySelector {
     padding: 10px;
-    background-color: purple;
-    height: 45%;
-    .day {
-      background-color: gold;
-      h3 {
-        margin-top: 5px;
-      }
+    button {
+      background-color: white;
+      color: $myTripColor;
+      font-weight: bold;      
     }
-    .daySelector {
-      background-color: yellow;
-      padding: 10px;
+  }
+  .todo {
+    .listBtn {
+      right: 30px;
     }
-    .todo {
-      .listBtn {
-        right: 30px;
+
+    h4 {
+      font-family: $fancyFont;
+    }
+
+    ul {
+      li {
+        display: inline-block;
       }
     }
   }
 }
 
+.myTrip:hover{
+  top: 50px;
+}
+
 #map-canvas {
   position: fixed;
   width: 100vw;
-  height: 100vh;
-  top: 0px;
+  height: 95vh;
+  top: 50px;
   // background-color: black;
 }
