--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -5,32 +5,40 @@ nav {
   height: 50px;
   background-color: rgba(0, 0, 0, 0.75);
   z-index: 2000;
-  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.95); }
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5); }
   nav .logo {
     height: 50px;
     padding: 5px;
     width: 200px;
     background-color: red;
-    display: inline-block; }
+    display: inline-block;
+    font-family: "Lobster", cursive;
+    color: white; }
     nav .logo h3 {
-      font-family: helvetica;
       margin: 5px; }
   nav .nav-link {
     color: white;
     display: inline-block;
+    border-radius: 7px;
     cursor: pointer;
     height: 100%;
     padding: 0px 10px 0px 10px;
     background-color: inherit;
-    transition: 0.5s all;
-    -webkit-transition: 0.5s all; }
-  nav .nav-link:hover {
-    background-color: #D1D1D1; }
+    transition: 0.25s all;
+    -webkit-transition: 0.25s all; }
+
+.nav-link:hover {
+  background-color: red; }
+
+.nav-link:active {
+  box-shadow: 0px 0px 5px black inset; }
 
 label {
   color: white;
   display: block;
-  margin: 10px; }
+  margin: 5px 0px 5px 5px;
+  font-family: "Lobster", cursive;
+  font-size: 1.5em; }
 
 select {
   width: 75%; }
@@ -39,6 +47,7 @@ select {
   background-color: red;
   font-size: 20px;
   color: white;
+  border: none;
   transition: 0.5s all;
   -webkit-transition: 0.5s all; }
 
@@ -48,46 +57,60 @@ select {
 
 .btn-remove:active {
   background-color: orange;
-  color: yellow; }
-
-.listBtn {
-  position: absolute;
-  right: 0px;
-  height: 40px;
-  width: 40px; }
+  color: yellow;
+  box-shadow: 0px 0px 10px black inset; }
 
 .btn-circle {
   border-radius: 100%; }
 
-.container {
+.menu-label {
+  position: absolute;
+  bottom: 10px;
+  font-family: "Lobster", cursive;
+  color: #dbdfee; }
+
+.menu-box {
   position: fixed;
-  top: 50px;
-  right: 0px;
-  height: 100%;
-  width: 33%;
-  z-index: 1000; }
-  .container .touristStuff {
-    padding: 10px;
-    background-color: rgba(42, 81, 94, 0.95);
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
-    height: 45%; }
-  .container .myTrip {
-    margin-top: 20px;
-    padding: 10px;
-    background-color: purple;
-    height: 45%; }
-    .container .myTrip .day {
-      background-color: gold; }
-      .container .myTrip .day h3 {
-        margin-top: 5px; }
-    .container .myTrip .daySelector {
-      background-color: yellow;
-      padding: 10px; }
-    .container .myTrip .todo .listBtn {
-      right: 30px; }
+  top: -300px;
+  height: 400px;
+  width: 300px;
+  padding: 10px;
+  z-index: 1000;
+  box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.5);
+  transition: 1s all ease;
+  -webkit-transition: 1s all ease; }
+
+.touristStuff {
+  background-color: rgba(42, 81, 94, 0.95);
+  right: 305px; }
+
+.touristStuff:hover {
+  top: 50px; }
+
+.myTrip {
+  background-color: rgba(52, 171, 211, 0.95);
+  right: 0px; }
+  .myTrip .day h3 {
+    font-family: "Lobster", cursive;
+    margin-top: 5px; }
+  .myTrip .daySelector {
+    padding: 10px; }
+    .myTrip .daySelector button {
+      background-color: white;
+      color: rgba(52, 171, 211, 0.95);
+      font-weight: bold; }
+  .myTrip .todo .listBtn {
+    right: 30px; }
+  .myTrip .todo h4 {
+    font-family: "Lobster", cursive; }
+  .myTrip .todo ul li {
+    display: inline-block; }
+
+.myTrip:hover {
+  top: 50px; }
 
 #map-canvas {
   position: fixed;
   width: 100vw;
-  height: 100vh;
-  top: 0px; }
+  height: 95vh;
+  top: 50px; }
