--- a/views/index.html
+++ b/views/index.html
@@ -2,8 +2,7 @@
 {% extends "layout.html" %}
 
 {% block content %}
-  <section class="container">
-    <section class="touristStuff">
+    <section class="touristStuff menu-box">
       <header>
         <h3></h3>
       </header>
@@ -41,9 +40,10 @@
       <button name="activities" class="btn btn-remove">
         <span class="glyphicon glyphicon-remove-circle" aria-hidden="true" aria-label="Delete a restaurant"></span>
       </button>
-
+      <h4 class="menu-label">Add an event to the plan...</h4>
     </section>
-    <section class="myTrip">
+
+    <section class="myTrip menu-box">
       <header class="day">
         <h3>DAY X</h3>
       </header>
@@ -54,22 +54,25 @@
         <button class="btn">+</button>
       </div>
       <div class="todo">
-        <h4>My Hotel</h4>
+        <h4 class="">My Hotel</h4>
         <ul>
-          <li>My Hotel<button class="btn listBtn btn-remove">X</button></li>
+        <li>Hotel</li>
+        <li><button class="btn btn-remove"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true" aria-label="Delete a restaurant"></span></button></li>
         </ul>
         <h4>My Restaurants</h4>
-        <ul>
-          <li>My Restaurants<button class="btn listBtn btn-remove">X</button></li>
-        </ul>
+        <div>
+          My Restaurants
+          <button class="btn btn-remove"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true" aria-label="Delete a restaurant"></span></button>
+        </div>
+
         <h4>My Activities</h4>
         <ul>
-          <li>My Activities<button class="btn listBtn btn-remove">X</button></li>
+          <li>My Activities<button class="btn btn-remove"><span class="glyphicon glyphicon-remove-circle" aria-hidden="true" aria-label="Delete a restaurant"></span></button></li>
         </ul>
       </div>
-
+      <h4 class="menu-label">View your itinerary for the day...</h4>
     </section>
-  </section><section id="map-canvas">
+  <section id="map-canvas">
   </section>
 
 
