--- a/views/layout.html
+++ b/views/layout.html
@@ -7,6 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <link href="/bower_components/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
     <link type="text/css" rel="stylesheet" href="stylesheets/index.css">
   </head>
   <body>
